# ziosite

./: Cargo.toml  LICENSE  README.md  zoisite-project.code-workspace
core/: Cargo.toml
core/src/: lib.rs
libfile/hello_plugin/: Cargo.toml
libfile/hello_plugin/src/: lib.rs
libfile/plugin_core/: Cargo.toml
libfile/plugin_core/src/: lib.rs
libfile/plugin_manager/: Cargo.toml
libfile/plugin_manager/src/: lib.rs
libfile/plugin_runner/: Cargo.toml
libfile/plugin_runner/src/: main.rs
registry/registry_manager/: Cargo.toml
registry/registry_manager/src/: lib.rs
registry/registry_manager/test/: registry_manager.rs
registry/registry_manager_macros/: Cargo.toml
registry/registry_manager_macros/src/: lib.rs
registry/registry_runner/: Cargo.toml
registry/registry_runner/src/: main.rs
