[package]
name = "zoisite_hello_plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keyword.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zoisite_plugin_core = { path = "../plugin_core" }