[package]
name = "zoisite_plugin_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keyword.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
zoisite_core = { path = "../../core" }
zoisite_plugin_manager = { path = "../plugin_manager" }
